# PythonStreamMemorySaving

./: README.md  pyproject.toml  write.py
